	since they seem not to work properly on Mac OS. argp.m4
	changed such that argp is only taken from gnulib when absent
        on the system.

	<-END-QUOTE->
	
	I tried to solve the problem with multiple definitions (they
	were the main cause for GLoBES not building on Mac). There I
	run into a new problem with SWIG. Somehow SWIG needs to have
	glb_exp glb_experiment_list to be specifically defined, which
	really looks strange to me. I hope I didn't create any bigger
	problems. But Perl support anyway is optional.

	BUGS #5-#9 are fixed.

	Merged Walter's code with support for more than 6 oscillation
	parameters.

	Fixed a little problem in the examples Makefile, should now 
	work for all types of installation (prefix vs no prefix)

29/07/05 JK
        Added several functions for user-defined chi^2 calculations
        (in file user_chi.c)

        Added global variable glb_current_exp that remembers the index
        of the currently processed experiment. This is necessary
        for user-defined chi^2.  

01/08/05 Version 2.3.8 -- PH
	Moved the module support functions (glb_modules.c) into
	globes/ and thus into libglobes. Makes linking
	easier. 'configure' now accepts '--disable-modules' in order
	to turn off module support. This feature may be useful on a
	variety of platforms. The glb_prior_module in that case is
	just linked like an ordinary object file. The mechanism I use
	for this should be extendable to having more than one module
	(even of the same time) permanently linked. In future any code
	using modules has to be conditionally compiled, such that is
	only compiled if GLB_WO_MODULES is *not* defined.

	Corrected a mistake in the Makefile in examples. The static
	linkage case was wrong, why it worked in the first place I
	don't know but the error made it break with above changes. Now
	it works porperly.

03/08/05 PH -- Fixed BUG#13. Now we use realloc, which makes the glbCopyXXX
	functions pretty featureful and  should fix the memory leak.